fix project name; switch default build to MinSizeRel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #
 #-----------------------------------------------------------------------------
 
-project(osmi_adminbounds)
+project(osmi_pubtrans3)
 
 set(OSMI_SIMPLE_VIEWS_VERSION_MAJOR 0)
 set(OSMI_SIMPLE_VIEWS_VERSION_MINOR 0)
@@ -95,11 +95,11 @@ if(CMAKE_BUILD_TYPE STREQUAL "Dev")
     add_definitions(${OSMIUM_WARNING_OPTIONS})
 endif()
 
-# Force RelWithDebInfo build type if none was given
+# Force MinSizeRel build type if none was given
 if(CMAKE_BUILD_TYPE)
     set(build_type ${CMAKE_BUILD_TYPE})
 else()
-    set(build_type "RelWithDebInfo")
+    set(build_type "MinSizeRel")
 endif()
 
 set(CMAKE_BUILD_TYPE ${build_type}
