Remove support for PROJ library
Osmium needs a historic version of PROJ (proj_api.h) and will not be
ported to newer PROJ C++ APIs. We do not need PROJ support, therefore it
is removed from osmi_pubtrans3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ set(AUTHOR "Michael Reichert <michael.reichert@geofabrik.de>")
 find_package(Boost)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
-find_package(Osmium COMPONENTS io proj gdal)
+find_package(Osmium COMPONENTS io gdal)
 include_directories(SYSTEM ${OSMIUM_INCLUDE_DIRS})
 
 #-----------------------------------------------------------------------------
